fix css for event button on mobile

--- a/app/Resources/markup/src/styles/partials/common.scss
+++ b/app/Resources/markup/src/styles/partials/common.scss
@@ -591,6 +591,7 @@ ul {
   height: 80px;
   border: none;
   opacity: 0;
+  border-radius: 0;
   cursor: pointer;
   transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
 
